# librarity-but-dumber

./: .gitignore  .gitmodules  Book.cpp  Book.h  CMakeLists.txt  LICENSE  Library.cpp  Library.h  Makefile  README.md  User.cpp  User.h  main.cpp
.github/workflows/: release.yml  test.yml
docs/: .gitignore  Makefile  citations.bib  documentation.tex
docs/code/: BookException.cpp  Exception.h  LibraryException.cpp  PasswordHelper.cpp  StringHelper.cpp  book-canonical.h  book-delete-contents.cpp  book-getters-setters.h  book-operators.h  book-print-contents.cpp  book-properties.h  book-update-contents.cpp  book-validators.h  build.sh  clone-repo.sh  library-add-user-book.cpp  library-canonical.h  library-find-books.cpp  library-parameter-constructor.cpp  library-print-book.cpp  library-print-books.cpp  library-properties.h  library-remove-book.cpp  library-sort-books.cpp  library-update-user-book-files.cpp  library-user-methods.cpp  main.cpp  program.h  run-download.sh  run.sh  test.sh  user-canonical.h  user-getters-setters.h  user-operators.cpp  user-properties.h  user-verify-password.cpp
docs/sections/: 0.1-titlepage.tex  1.0-introduction.tex  1.1-project-requirements.tex  1.2-technologies.tex  2.0-user-manual.tex  2.1-project-download.tex  2.2-codebase-setup.tex  2.3-project-usage.tex  3.0-realization.tex  3.1-project-structure.tex  3.2-code-realization.tex  3.3-testing.tex  4.0-apendix.tex
include/book/: Book.h
include/exception/: BookErrorCode.h  BookException.h  Exception.h  LibraryErrorCode.h  LibraryException.h
include/helpers/: PasswordHelper.h  ReadingMode.h  SortingMode.h  StringHelper.h  WritingMode.h
include/program/: Program.h
include/user/: User.h
lib/: CMakeLists.txt
lib/book/: Book.cpp  Book.h  BookException.cpp  BookException.h
lib/enums/: FindMode.h  LibraryErrorCode.h  SortingMode.h  WritingMode.h
lib/exception/: BookException.cpp  LibraryException.cpp
lib/helpers/: PasswordHelper.cpp  StringHelper.cpp
lib/librarity-but-dumber/: LibrarityButDumber.cpp  LibrarityButDumber.h
lib/program/: Program.cpp
lib/user/: User.cpp  User.h
src/book/: Book.cpp  Book.h
src/enums/: ReadingMode.h
src/user/: User.cpp  User.h
test/: CMakeLists.txt
test/e2e/: LibrarityButDumberTest.cpp
test/unit/: BookTest.cpp
